syntax = "proto3";
package DNATestingSystem.GrpcService.ThinhLC.Protos;

message CreateResponse {
  int32 id = 1;
  bool success = 2;
  string message = 3;
}
message UpdateResponse {
  int32 affectedRows = 1;
  bool success = 2;
  string message = 3;
}
message DeleteResponse {
  bool success = 1;
  string message = 2;
}
message EmptyRequest {}